--- a/css/components/courses.css
+++ b/css/components/courses.css
@@ -11,7 +11,8 @@
 
 .courses-header h1 {
     font-size: 2.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 4rem;
+    margin-top: 2rem;
     color: var(--text-primary);
 }
 
